Search member descriptions
Fixes #18

--- a/pfgrep.1
+++ b/pfgrep.1
@@ -57,6 +57,8 @@ being set at the same time with
 Counts the matched lines in each file. Implies the
 .Fl q
 flag.
+.It Fl d
+Search for text member descriptions in physical files. Descriptions will be shown as line 0.
 .It Fl e Ar expression
 Match the expression specified by the argument. Multiple of these can be passed,
 and in combination with the
